# Ubuntu_X11_Build_Qt_widgets

./: .gitignore  README.md
Qt_themself/: Ubuntu_dependency.sh  Uubntu_dependency.sh  readme.sh  toolchain_host_powerfull.cmake
example/: readme.sh
example/src/: CMakeLists.txt  client.cpp  client.h  main.cpp
fortuneclient/: readme.sh
fortuneclient/src/: client.cpp
